# in-situ-analytics-proxy-app

TALASS/: README
TALASS/CMake-Modules/: TalassConfig.cmake  TalassSetup.cmake
TALASS/FlexArray/src/: Array.h  BlockedArray.h  CMakeLists.txt  MappedArray.h
TALASS/ParallelTopology/: CMakeLists.txt
TALASS/ParallelTopology/config/: PTConfig.cmake
TALASS/ParallelTopology/data/: sample_data_hcci_28_28_28.raw
TALASS/ParallelTopology/src/: .FixLocalTreeAlgorithm.h.swp  .SortedInputStream.cpp.swp  Box.h  BoxSorter.h  CMakeLists.txt  ConfiguredFlow.h  ControlFlow.h  DataSpaceInputStream.cpp  DataSpaceInputStream.h  DataSpaceOutputStream.cpp  DataSpaceOutputStream.h  DistributedDefinitions.h  FiFoBuffer.cpp  FiFoBuffer.h  FixLocalTreeAlgorithm.cpp  FixLocalTreeAlgorithm.h  GatherAlgorithm.cpp  GatherAlgorithm.h  InputStream.h  LocalComputeAlgorithm.cpp  LocalComputeAlgorithm.h  MergeTree.cpp  MergeTree.h  MergeTreeBuilder.h  MergeTreeLite.h  ModuloFlow.cpp  ModuloFlow.h  ModuloScatter.cpp  ModuloScatter.h  Neighborhood.h  ParallelCommunicator.cpp  ParallelCommunicator.h  ParallelControl.cpp  ParallelControl.h  ParallelFlow.cpp  ParallelFlow.h  ParallelGatherAlgorithm.cpp  ParallelGatherAlgorithm.h  ParallelInputStream.cpp  ParallelInputStream.h  (+42 more)
TALASS/ParallelTopology/utilities/: CMakeLists.txt  createDataBlock.cpp  joinTrees.cpp  localCompute.cpp
